# memory-model

./: .gitignore  Cargo.toml
compiler/: Cargo.toml
compiler/src/: ast.rs  lib.rs  main.rs  tokens.rs
memory-model/: Cargo.toml
memory-model-dsl/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
memory-model-dsl/syntaxes/: memmodeldsl.tmLanguage.json
memory-model/src/: alias.rs  lib.rs  main.rs  recycle.rs
runtime/: Cargo.toml
runtime/src/: error.rs  main.rs
